# nimby_timetable

./: LICENSE  README.md  pyproject.toml  run_lul.sh  run_rtt.sh
nimby_timetable/downloader/: downloader.py
nimby_timetable/lul_parser/: __main__.py  lul_parser.py
nimby_timetable/rtt_parser/: __main__.py  rtt_parser.py
nimby_timetable/timetable/: location.py  timetable.py
